# zigbee_airstation

./: CMakeLists.txt  LICENSE  README.md
app/: CMakeLists.txt  Kconfig  prj.conf
app/boards/: supermini_nrf52840.overlay  supermini_nrf52840.overlay.old
app/drivers/: CMakeLists.txt  Kconfig
app/drivers/lcd5110/: CMakeLists.txt  Kconfig  display_lcd5110.c
app/dts/bindings/display/: zephyr,lcd5110.yaml
app/include/: bme280_sensor.h  ccs811_sensor.h  lcd5110_display.h  lcd5110_font.h  st7789v_display.h
app/src/: bme280_sensor.c  ccs811_sensor.c  lcd5110_display.c  main.c  st7789v_display_test.c
boards/promicro/supermini_nrf52840/: Kconfig.defconfig  board.yml  supermini_nrf52840-pinctrl.dtsi  supermini_nrf52840.dts  supermini_nrf52840.yaml
drivers/sensor/: CMakeLists.txt  Kconfig
